[gd_scene load_steps=9 format=3 uid="uid://d274iv81isf2g"]

[ext_resource type="Script" path="res://scripts/hotbar.gd" id="1_jhfni"]
[ext_resource type="Script" path="res://resources/duck.gd" id="2_3ij5o"]
[ext_resource type="PackedScene" uid="uid://dkdwnisny52rw" path="res://scenes/ui/hotbarItem.tscn" id="2_7syf8"]
[ext_resource type="Texture2D" uid="uid://biaq1w6g2t2le" path="res://sprites/hotbarFrame-1.png.png" id="2_m7i88"]
[ext_resource type="Resource" uid="uid://rdohsd3c4d5w" path="res://resources/YellowDuck.tres" id="4_r3y5m"]
[ext_resource type="Resource" uid="uid://booaip81lt2ve" path="res://resources/FireDuck.tres" id="5_m36vs"]
[ext_resource type="Resource" uid="uid://bkpuxbjqntjvi" path="res://resources/FreezeDuck.tres" id="6_twiwv"]
[ext_resource type="Resource" uid="uid://dcofloqvy26sh" path="res://resources/ChemicalDuck.tres" id="7_1vwdh"]

[node name="Hotbar" type="CanvasLayer"]
script = ExtResource("1_jhfni")
ducks = Array[ExtResource("2_3ij5o")]([ExtResource("4_r3y5m"), ExtResource("6_twiwv"), ExtResource("5_m36vs"), ExtResource("7_1vwdh")])

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 21.0
offset_right = 546.0
offset_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m7i88")

[node name="Label" type="Label" parent="Control/HBoxContainer/TextureRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 99.0
offset_right = 121.0
offset_bottom = 122.0
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotbarItem" parent="Control/HBoxContainer" instance=ExtResource("2_7syf8")]
layout_mode = 2

[node name="HotbarItem2" parent="Control/HBoxContainer" instance=ExtResource("2_7syf8")]
layout_mode = 2

[node name="HotbarItem3" parent="Control/HBoxContainer" instance=ExtResource("2_7syf8")]
layout_mode = 2

[node name="HotbarItem4" parent="Control/HBoxContainer" instance=ExtResource("2_7syf8")]
layout_mode = 2
